// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AddressesData Updater AddressesData Updater: handles duplicate inserts/saves 1`] = `
Object {
  "action": Array [],
  "address": Array [
    Object {
      "aggregate_block_id": 1,
      "block_id": 0,
      "block_time": 15,
      "id": "AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA",
      "last_transaction_hash": "XDXDXDXDXDXDXDXDXDXDXDXDXDXDXDXDXDXDXDXDXDXDXDXDXDXDXDXDXDXDXDXD",
      "last_transaction_id": "5",
      "last_transaction_time": 15,
      "transaction_count": "15",
      "transaction_hash": "INITINITINITINITINITINITINITINITINITINITINITINITINITINITINITINIT",
      "transaction_id": "4",
      "transfer_count": "10",
    },
    Object {
      "aggregate_block_id": 0,
      "block_id": 0,
      "block_time": 15,
      "id": "BBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBB",
      "last_transaction_hash": "NINENINENINENINENINENINENINENINENINENINENINENINENINENINENINENINE",
      "last_transaction_id": "9",
      "last_transaction_time": 15,
      "transaction_count": "10",
      "transaction_hash": "UNITUNITUNITUNITUNITUNITUNITUNITUNITUNITUNITUNITUNITUNITUNITUNIT",
      "transaction_id": "9",
      "transfer_count": "5",
    },
  ],
  "addressToTransaction": Array [
    Object {
      "id1": "AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA",
      "id2": "5",
    },
    Object {
      "id1": "BBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBB",
      "id2": "10",
    },
    Object {
      "id1": "BBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBB",
      "id2": "9",
    },
  ],
  "addressToTransfer": Array [],
  "asset": Array [],
  "assetToTransaction": Array [],
  "block": Array [],
  "coin": Array [],
  "contract": Array [],
  "dataPoint": Array [],
  "migration": Array [],
  "processedIndex": Array [],
  "transaction": Array [
    Object {
      "attributes_raw": "0x1234",
      "block_id": 1,
      "block_time": 15,
      "gas": null,
      "hash": "XDXDXDXDXDXDXDXDXDXDXDXDXDXDXDXDXDXDXDXDXDXDXDXDXDXDXDXDXDXDXDXD",
      "id": "5",
      "index": 1,
      "network_fee": "0.00000000",
      "nonce": null,
      "pubkey": null,
      "result_raw": null,
      "script": null,
      "scripts_raw": "0xab38352559b8b203bde5fddfa0b07d8b25111111",
      "size": 10,
      "system_fee": "0.00000000",
      "type": "ContractTransaction",
      "version": 0,
    },
    Object {
      "attributes_raw": "0x1234",
      "block_id": 1,
      "block_time": 15,
      "gas": null,
      "hash": "NINENINENINENINENINENINENINENINENINENINENINENINENINENINENINENINE",
      "id": "9",
      "index": 1,
      "network_fee": "0.00000000",
      "nonce": null,
      "pubkey": null,
      "result_raw": null,
      "script": null,
      "scripts_raw": "0xab38352559b8b203bde5fddfa0b07d8b25111111",
      "size": 10,
      "system_fee": "0.00000000",
      "type": "ContractTransaction",
      "version": 0,
    },
    Object {
      "attributes_raw": "0x1234",
      "block_id": 1,
      "block_time": 15,
      "gas": null,
      "hash": "TENTTENTTENTTENTTENTTENTTENTTENTTENTTENTTENTTENTTENTTENTTENTTENT",
      "id": "10",
      "index": 1,
      "network_fee": "0.00000000",
      "nonce": null,
      "pubkey": null,
      "result_raw": null,
      "script": null,
      "scripts_raw": "0xab38352559b8b203bde5fddfa0b07d8b25111111",
      "size": 10,
      "system_fee": "0.00000000",
      "type": "ContractTransaction",
      "version": 0,
    },
  ],
  "transactionInputOutput": Array [],
  "transfer": Array [],
}
`;

exports[`AddressesData Updater AddressesData Updater: handles insert/save 1`] = `
Object {
  "action": Array [],
  "address": Array [
    Object {
      "aggregate_block_id": 1,
      "block_id": 0,
      "block_time": 15,
      "id": "AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA",
      "last_transaction_hash": "XDXDXDXDXDXDXDXDXDXDXDXDXDXDXDXDXDXDXDXDXDXDXDXDXDXDXDXDXDXDXDXD",
      "last_transaction_id": "5",
      "last_transaction_time": 15,
      "transaction_count": "15",
      "transaction_hash": "INITINITINITINITINITINITINITINITINITINITINITINITINITINITINITINIT",
      "transaction_id": "4",
      "transfer_count": "10",
    },
    Object {
      "aggregate_block_id": 0,
      "block_id": 0,
      "block_time": 15,
      "id": "BBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBB",
      "last_transaction_hash": "NINENINENINENINENINENINENINENINENINENINENINENINENINENINENINENINE",
      "last_transaction_id": "9",
      "last_transaction_time": 15,
      "transaction_count": "10",
      "transaction_hash": "UNITUNITUNITUNITUNITUNITUNITUNITUNITUNITUNITUNITUNITUNITUNITUNIT",
      "transaction_id": "9",
      "transfer_count": "5",
    },
  ],
  "addressToTransaction": Array [
    Object {
      "id1": "AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA",
      "id2": "5",
    },
    Object {
      "id1": "BBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBB",
      "id2": "10",
    },
    Object {
      "id1": "BBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBB",
      "id2": "9",
    },
  ],
  "addressToTransfer": Array [],
  "asset": Array [],
  "assetToTransaction": Array [],
  "block": Array [],
  "coin": Array [],
  "contract": Array [],
  "dataPoint": Array [],
  "migration": Array [],
  "processedIndex": Array [],
  "transaction": Array [
    Object {
      "attributes_raw": "0x1234",
      "block_id": 1,
      "block_time": 15,
      "gas": null,
      "hash": "XDXDXDXDXDXDXDXDXDXDXDXDXDXDXDXDXDXDXDXDXDXDXDXDXDXDXDXDXDXDXDXD",
      "id": "5",
      "index": 1,
      "network_fee": "0.00000000",
      "nonce": null,
      "pubkey": null,
      "result_raw": null,
      "script": null,
      "scripts_raw": "0xab38352559b8b203bde5fddfa0b07d8b25111111",
      "size": 10,
      "system_fee": "0.00000000",
      "type": "ContractTransaction",
      "version": 0,
    },
    Object {
      "attributes_raw": "0x1234",
      "block_id": 1,
      "block_time": 15,
      "gas": null,
      "hash": "NINENINENINENINENINENINENINENINENINENINENINENINENINENINENINENINE",
      "id": "9",
      "index": 1,
      "network_fee": "0.00000000",
      "nonce": null,
      "pubkey": null,
      "result_raw": null,
      "script": null,
      "scripts_raw": "0xab38352559b8b203bde5fddfa0b07d8b25111111",
      "size": 10,
      "system_fee": "0.00000000",
      "type": "ContractTransaction",
      "version": 0,
    },
    Object {
      "attributes_raw": "0x1234",
      "block_id": 1,
      "block_time": 15,
      "gas": null,
      "hash": "TENTTENTTENTTENTTENTTENTTENTTENTTENTTENTTENTTENTTENTTENTTENTTENT",
      "id": "10",
      "index": 1,
      "network_fee": "0.00000000",
      "nonce": null,
      "pubkey": null,
      "result_raw": null,
      "script": null,
      "scripts_raw": "0xab38352559b8b203bde5fddfa0b07d8b25111111",
      "size": 10,
      "system_fee": "0.00000000",
      "type": "ContractTransaction",
      "version": 0,
    },
  ],
  "transactionInputOutput": Array [],
  "transfer": Array [],
}
`;

exports[`AddressesData Updater AddressesData Updater: handles reverting inputs/saves 1`] = `
Object {
  "action": Array [],
  "address": Array [
    Object {
      "aggregate_block_id": 1,
      "block_id": 0,
      "block_time": 15,
      "id": "AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA",
      "last_transaction_hash": "XDXDXDXDXDXDXDXDXDXDXDXDXDXDXDXDXDXDXDXDXDXDXDXDXDXDXDXDXDXDXDXD",
      "last_transaction_id": "5",
      "last_transaction_time": 15,
      "transaction_count": "15",
      "transaction_hash": "INITINITINITINITINITINITINITINITINITINITINITINITINITINITINITINIT",
      "transaction_id": "4",
      "transfer_count": "10",
    },
    Object {
      "aggregate_block_id": 0,
      "block_id": 0,
      "block_time": 15,
      "id": "BBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBB",
      "last_transaction_hash": "NINENINENINENINENINENINENINENINENINENINENINENINENINENINENINENINE",
      "last_transaction_id": "9",
      "last_transaction_time": 15,
      "transaction_count": "10",
      "transaction_hash": "UNITUNITUNITUNITUNITUNITUNITUNITUNITUNITUNITUNITUNITUNITUNITUNIT",
      "transaction_id": "9",
      "transfer_count": "5",
    },
  ],
  "addressToTransaction": Array [
    Object {
      "id1": "AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA",
      "id2": "5",
    },
    Object {
      "id1": "BBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBB",
      "id2": "10",
    },
    Object {
      "id1": "BBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBB",
      "id2": "9",
    },
  ],
  "addressToTransfer": Array [],
  "asset": Array [],
  "assetToTransaction": Array [],
  "block": Array [],
  "coin": Array [],
  "contract": Array [],
  "dataPoint": Array [],
  "migration": Array [],
  "processedIndex": Array [],
  "transaction": Array [
    Object {
      "attributes_raw": "0x1234",
      "block_id": 1,
      "block_time": 15,
      "gas": null,
      "hash": "XDXDXDXDXDXDXDXDXDXDXDXDXDXDXDXDXDXDXDXDXDXDXDXDXDXDXDXDXDXDXDXD",
      "id": "5",
      "index": 1,
      "network_fee": "0.00000000",
      "nonce": null,
      "pubkey": null,
      "result_raw": null,
      "script": null,
      "scripts_raw": "0xab38352559b8b203bde5fddfa0b07d8b25111111",
      "size": 10,
      "system_fee": "0.00000000",
      "type": "ContractTransaction",
      "version": 0,
    },
    Object {
      "attributes_raw": "0x1234",
      "block_id": 1,
      "block_time": 15,
      "gas": null,
      "hash": "NINENINENINENINENINENINENINENINENINENINENINENINENINENINENINENINE",
      "id": "9",
      "index": 1,
      "network_fee": "0.00000000",
      "nonce": null,
      "pubkey": null,
      "result_raw": null,
      "script": null,
      "scripts_raw": "0xab38352559b8b203bde5fddfa0b07d8b25111111",
      "size": 10,
      "system_fee": "0.00000000",
      "type": "ContractTransaction",
      "version": 0,
    },
    Object {
      "attributes_raw": "0x1234",
      "block_id": 1,
      "block_time": 15,
      "gas": null,
      "hash": "TENTTENTTENTTENTTENTTENTTENTTENTTENTTENTTENTTENTTENTTENTTENTTENT",
      "id": "10",
      "index": 1,
      "network_fee": "0.00000000",
      "nonce": null,
      "pubkey": null,
      "result_raw": null,
      "script": null,
      "scripts_raw": "0xab38352559b8b203bde5fddfa0b07d8b25111111",
      "size": 10,
      "system_fee": "0.00000000",
      "type": "ContractTransaction",
      "version": 0,
    },
  ],
  "transactionInputOutput": Array [],
  "transfer": Array [],
}
`;

exports[`AddressesData Updater AddressesData Updater: handles reverting inputs/saves 2`] = `
Object {
  "action": Array [],
  "address": Array [
    Object {
      "aggregate_block_id": 1,
      "block_id": 0,
      "block_time": 15,
      "id": "AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA",
      "last_transaction_hash": "XDXDXDXDXDXDXDXDXDXDXDXDXDXDXDXDXDXDXDXDXDXDXDXDXDXDXDXDXDXDXDXD",
      "last_transaction_id": "5",
      "last_transaction_time": 15,
      "transaction_count": "15",
      "transaction_hash": "INITINITINITINITINITINITINITINITINITINITINITINITINITINITINITINIT",
      "transaction_id": "4",
      "transfer_count": "10",
    },
    Object {
      "aggregate_block_id": 1,
      "block_id": 0,
      "block_time": 15,
      "id": "BBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBB",
      "last_transaction_hash": "TENTTENTTENTTENTTENTTENTTENTTENTTENTTENTTENTTENTTENTTENTTENTTENT",
      "last_transaction_id": "10",
      "last_transaction_time": 15,
      "transaction_count": "15",
      "transaction_hash": "UNITUNITUNITUNITUNITUNITUNITUNITUNITUNITUNITUNITUNITUNITUNITUNIT",
      "transaction_id": "9",
      "transfer_count": "10",
    },
  ],
  "addressToTransaction": Array [
    Object {
      "id1": "AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA",
      "id2": "5",
    },
    Object {
      "id1": "BBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBB",
      "id2": "10",
    },
    Object {
      "id1": "BBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBB",
      "id2": "9",
    },
  ],
  "addressToTransfer": Array [],
  "asset": Array [],
  "assetToTransaction": Array [],
  "block": Array [],
  "coin": Array [],
  "contract": Array [],
  "dataPoint": Array [],
  "migration": Array [],
  "processedIndex": Array [],
  "transaction": Array [
    Object {
      "attributes_raw": "0x1234",
      "block_id": 1,
      "block_time": 15,
      "gas": null,
      "hash": "XDXDXDXDXDXDXDXDXDXDXDXDXDXDXDXDXDXDXDXDXDXDXDXDXDXDXDXDXDXDXDXD",
      "id": "5",
      "index": 1,
      "network_fee": "0.00000000",
      "nonce": null,
      "pubkey": null,
      "result_raw": null,
      "script": null,
      "scripts_raw": "0xab38352559b8b203bde5fddfa0b07d8b25111111",
      "size": 10,
      "system_fee": "0.00000000",
      "type": "ContractTransaction",
      "version": 0,
    },
    Object {
      "attributes_raw": "0x1234",
      "block_id": 1,
      "block_time": 15,
      "gas": null,
      "hash": "NINENINENINENINENINENINENINENINENINENINENINENINENINENINENINENINE",
      "id": "9",
      "index": 1,
      "network_fee": "0.00000000",
      "nonce": null,
      "pubkey": null,
      "result_raw": null,
      "script": null,
      "scripts_raw": "0xab38352559b8b203bde5fddfa0b07d8b25111111",
      "size": 10,
      "system_fee": "0.00000000",
      "type": "ContractTransaction",
      "version": 0,
    },
    Object {
      "attributes_raw": "0x1234",
      "block_id": 1,
      "block_time": 15,
      "gas": null,
      "hash": "TENTTENTTENTTENTTENTTENTTENTTENTTENTTENTTENTTENTTENTTENTTENTTENT",
      "id": "10",
      "index": 1,
      "network_fee": "0.00000000",
      "nonce": null,
      "pubkey": null,
      "result_raw": null,
      "script": null,
      "scripts_raw": "0xab38352559b8b203bde5fddfa0b07d8b25111111",
      "size": 10,
      "system_fee": "0.00000000",
      "type": "ContractTransaction",
      "version": 0,
    },
  ],
  "transactionInputOutput": Array [],
  "transfer": Array [],
}
`;

exports[`AddressesData Updater AddressesData Updater: handles reverting inputs/saves 3`] = `
Object {
  "action": Array [],
  "address": Array [
    Object {
      "aggregate_block_id": 1,
      "block_id": 0,
      "block_time": 15,
      "id": "AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA",
      "last_transaction_hash": "XDXDXDXDXDXDXDXDXDXDXDXDXDXDXDXDXDXDXDXDXDXDXDXDXDXDXDXDXDXDXDXD",
      "last_transaction_id": "5",
      "last_transaction_time": 15,
      "transaction_count": "15",
      "transaction_hash": "INITINITINITINITINITINITINITINITINITINITINITINITINITINITINITINIT",
      "transaction_id": "4",
      "transfer_count": "10",
    },
    Object {
      "aggregate_block_id": 0,
      "block_id": 0,
      "block_time": 15,
      "id": "BBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBB",
      "last_transaction_hash": "NINENINENINENINENINENINENINENINENINENINENINENINENINENINENINENINE",
      "last_transaction_id": "9",
      "last_transaction_time": 15,
      "transaction_count": "10",
      "transaction_hash": "UNITUNITUNITUNITUNITUNITUNITUNITUNITUNITUNITUNITUNITUNITUNITUNIT",
      "transaction_id": "9",
      "transfer_count": "5",
    },
  ],
  "addressToTransaction": Array [
    Object {
      "id1": "AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA",
      "id2": "5",
    },
    Object {
      "id1": "BBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBB",
      "id2": "10",
    },
    Object {
      "id1": "BBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBB",
      "id2": "9",
    },
  ],
  "addressToTransfer": Array [],
  "asset": Array [],
  "assetToTransaction": Array [],
  "block": Array [],
  "coin": Array [],
  "contract": Array [],
  "dataPoint": Array [],
  "migration": Array [],
  "processedIndex": Array [],
  "transaction": Array [
    Object {
      "attributes_raw": "0x1234",
      "block_id": 1,
      "block_time": 15,
      "gas": null,
      "hash": "XDXDXDXDXDXDXDXDXDXDXDXDXDXDXDXDXDXDXDXDXDXDXDXDXDXDXDXDXDXDXDXD",
      "id": "5",
      "index": 1,
      "network_fee": "0.00000000",
      "nonce": null,
      "pubkey": null,
      "result_raw": null,
      "script": null,
      "scripts_raw": "0xab38352559b8b203bde5fddfa0b07d8b25111111",
      "size": 10,
      "system_fee": "0.00000000",
      "type": "ContractTransaction",
      "version": 0,
    },
    Object {
      "attributes_raw": "0x1234",
      "block_id": 1,
      "block_time": 15,
      "gas": null,
      "hash": "NINENINENINENINENINENINENINENINENINENINENINENINENINENINENINENINE",
      "id": "9",
      "index": 1,
      "network_fee": "0.00000000",
      "nonce": null,
      "pubkey": null,
      "result_raw": null,
      "script": null,
      "scripts_raw": "0xab38352559b8b203bde5fddfa0b07d8b25111111",
      "size": 10,
      "system_fee": "0.00000000",
      "type": "ContractTransaction",
      "version": 0,
    },
    Object {
      "attributes_raw": "0x1234",
      "block_id": 1,
      "block_time": 15,
      "gas": null,
      "hash": "TENTTENTTENTTENTTENTTENTTENTTENTTENTTENTTENTTENTTENTTENTTENTTENT",
      "id": "10",
      "index": 1,
      "network_fee": "0.00000000",
      "nonce": null,
      "pubkey": null,
      "result_raw": null,
      "script": null,
      "scripts_raw": "0xab38352559b8b203bde5fddfa0b07d8b25111111",
      "size": 10,
      "system_fee": "0.00000000",
      "type": "ContractTransaction",
      "version": 0,
    },
  ],
  "transactionInputOutput": Array [],
  "transfer": Array [],
}
`;
